@@ -3,6 +3,7 @@ package com.jpacourse.service.impl;
 import com.jpacourse.mapper.VisitMapper;
 import com.jpacourse.persistance.dao.VisitDao;
 import com.jpacourse.dto.VisitTO;
+import com.jpacourse.persistance.entity.VisitEntity;
 import com.jpacourse.rest.exception.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -15,6 +16,7 @@ import com.jpacourse.persistance.entity.PatientEntity;
 import com.jpacourse.service.PatientService;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -45,10 +47,14 @@ public class PatientServiceImpl implements PatientService {
     }
 
     @Override
-    public List<VisitTO> getVisitsByPatientId(long patientId) {
-        return visitDao.findByPatientId(patientId)
-                .stream()
+    public List<VisitTO> findVisitsByPatientId(long patientId) {
+        PatientEntity patient = patientDao.findOne(patientId);
+        if (patient == null) {
+            throw new EntityNotFoundException("Patient not found with id: " + patientId);
+        }
+        List<VisitEntity> visits = visitDao.findByPatientId(patientId);
+        return visits.stream()
                 .map(VisitMapper::mapToTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
